// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AddDiscoveredHostLink /> renders a link to add discovered host 1`] = `
<a>
  <Status
    icon="add-circle-o"
    iconType={null}
  >
    Add host
  </Status>
</a>
`;

exports[`<GenericError /> renders an error message 1`] = `
<Status
  icon="error-circle-o"
  iconType={null}
>
  Registration Error
</Status>
`;

exports[`<GenericError /> with details renders an error message with details 1`] = `
<PopoverStatus
  header={
    <div>
      Registration Error
    </div>
  }
  icon="error-circle-o"
  iconType={null}
>
  <div>
    some error details
  </div>
</PopoverStatus>
`;

exports[`<GenericProgress /> renders a progress message 1`] = `
<Status
  icon="in-progress"
  iconType={null}
>
  Provisioning
</Status>
`;

exports[`<GenericStatus /> renders a generic status string 1`] = `"Provisioned"`;

exports[`<GenericSuccess /> renders a success message 1`] = `
<Status
  icon="ok"
  iconType={null}
>
  Provisioned
</Status>
`;

exports[`<ValidationError /> renders a validation error 1`] = `
<PopoverStatus
  header={
    <div>
      Validation Error(s)
    </div>
  }
  icon="error-circle-o"
  iconType={null}
>
  <div>
    some validation errors
  </div>
</PopoverStatus>
`;
